# Compiler

./: .gitignore  CMakeLists.txt  README.md  lexer.cpp  main.cpp  token.cpp  token.h
project/: README.md  _lexTesting.txt  _lexerDocumentation.txt  _output.html  _parserDocumentation.txt  _parserTesting.txt  _semanticDocumentation.txt  _semanticTesting.txt  ast.cpp  ast.h  codeGen.cpp  codeGen.h  cst.cpp  cst.h  dontRunMeYet  error.cpp  error.h  genSymbolTable.cpp  genSymbolTable.h  jumps.cpp  jumps.h  jumpsRow.cpp  jumpsRow.h  lexer.cpp  lexer.h  lexer.html  main.cpp  main.h  makefile  not_main.cpp  output.cpp  output.h  output.html  parser.cpp  parser.h  semantic.cpp  semantic.h  stEntry.cpp  stEntry.h  staticData.cpp  (+8 more)
project/bootstrap/css/: bootstrap.css
project/js/: pic1.js  pic2.js  pic3.js  pics.js
project/testcases/: .string1.swp  boolean1  error  multipleFiles  scope1  string1  string2bad
project/testcases/graded_cases/parse/: 17  19  20  21  test
project/testcases/graded_cases/parse/good_code/: 16
project/testcases/graded_cases/parse/questionable_code/: 2
project/testcases/graded_cases/semantic/: _program1  program1  program2
project/testcases/graded_cases/semantic/fixthese/: fix01
project/testcases/graded_cases/semantic_code/bad_code/: 10  11  13  14  15  3  4  5  7  9  _13
project/testcases/graded_cases/semantic_code/good_code/: 1  2  4  6  8  9  _7
project/testcases/graded_cases/semantic_code/questionable_code/: 1  2  3  4
project/testcases/my_cases/parse/fail/: bracesInsteadOfParens  doesntLex  inputFile4  notValidId  notValidType  printWhile  whileBlockBoolexpr
project/testcases/my_cases/parse/pass/: declaration  declarations
project/testcases/my_cases/semantic/bad_code/: _NOTES  assign_different_type_bool_to_int  assign_different_type_bool_to_string  assign_different_type_int_to_bool  assign_different_type_int_to_str  assign_different_type_string_to_bool  assign_different_type_string_to_int  comp_bool_int  comp_bool_string  comp_int_bool  comp_int_string  comp_string_bool  comp_string_int  comp_undeclared_int  comp_var_bool_int  comp_var_bool_string  comp_var_bool_var_int  comp_var_bool_var_string  comp_var_int_bool  comp_var_int_string  comp_var_int_undeclared_var_int_undeclared  comp_var_int_var_bool  comp_var_int_var_int_undeclared  comp_var_int_var_string  print_undeclared  undeclared_different_scope  undeclared_same_scope  variable_redeclaration_different_type
project/testcases/my_cases/semantic/good_code/: assign_addition  comp_bool  comp_int  comp_var_int_int  print_utilizes_same_scope
project/testcases/parse/fail/: assignBoolExpr  emptyPrint  inputFile3  noStartBraces  printBlock  stringIntopDigit  whilewhile
project/testcases/parse/pass/: digitIntopDigit  multipleFiles  printEmptyCharList  stringExpr
project/testcases/temp/: 01_declareVars  02_printIntConst  03_assignVarToInt  04_addConst  05_addConstVar  06_assignBoolConst  07_storeStringVar  08_assignString  09_printString  10_printStringVar  11_printAssignStringVar  12_printIntVar  13_printAssignIntVar  14_assignBooleanCheck  14_printAssignBooleanCheckMultiple  15_printAssignBooleanCheck  16_printAssignBooleanCheckStrings  17_printBooleanCheck  18_printBooleanLiterals  19_simpleWhileStatement  20_whileVariables  21_ifCompVar  21_simpleIf  22_simpleIf  23_simpleWhile
