cmake_minimum_required(VERSION 3.6)
project(Compiler)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
    project/bootstrap/css/bootstrap-theme.css
    project/bootstrap/css/bootstrap-theme.css.map
    project/bootstrap/css/bootstrap-theme.min.css
    project/bootstrap/css/bootstrap-theme.min.css.map
    project/bootstrap/css/bootstrap.css
    project/bootstrap/css/bootstrap.css.map
    project/bootstrap/css/bootstrap.min.css
    project/bootstrap/css/bootstrap.min.css.map
    project/bootstrap/fonts/glyphicons-halflings-regular.eot
    project/bootstrap/fonts/glyphicons-halflings-regular.svg
    project/bootstrap/fonts/glyphicons-halflings-regular.ttf
    project/bootstrap/fonts/glyphicons-halflings-regular.woff
    project/bootstrap/fonts/glyphicons-halflings-regular.woff2
    project/bootstrap/js/bootstrap.js
    project/bootstrap/js/bootstrap.min.js
    project/bootstrap/js/npm.js
    project/js/pic1.js
    project/js/pic2.js
    project/js/pic3.js
    project/treant-js/examples/basic-example/basic-example.css
    project/treant-js/examples/basic-example/basic-example.js
    project/treant-js/examples/basic-example/index.html
    project/treant-js/examples/collapsable/img/cheryl.png
    project/treant-js/examples/collapsable/img/figgs.png
    project/treant-js/examples/collapsable/img/lana.png
    project/treant-js/examples/collapsable/img/malory.png
    project/treant-js/examples/collapsable/img/pam.png
    project/treant-js/examples/collapsable/img/sterling.png
    project/treant-js/examples/collapsable/img/woodhouse.png
    project/treant-js/examples/collapsable/collapsable.css
    project/treant-js/examples/collapsable/collapsable.js
    project/treant-js/examples/collapsable/index.html
    project/treant-js/examples/comments/avatar.jpg
    project/treant-js/examples/comments/example8.css
    project/treant-js/examples/comments/example8.js
    project/treant-js/examples/comments/index.html
    project/treant-js/examples/connectors/connectors.css
    project/treant-js/examples/connectors/connectors.js
    project/treant-js/examples/connectors/index.html
    project/treant-js/examples/custom-color-plus-scrollbar/custom-color-plus-scrollbar.css
    project/treant-js/examples/custom-color-plus-scrollbar/custom-color-plus-scrollbar.js
    project/treant-js/examples/custom-color-plus-scrollbar/index.html
    project/treant-js/examples/custom-colored/custom-colored.css
    project/treant-js/examples/custom-colored/custom-colored.js
    project/treant-js/examples/custom-colored/index.html
    project/treant-js/examples/evolution-tree/img/archaebacteria.png
    project/treant-js/examples/evolution-tree/img/bonyfish.png
    project/treant-js/examples/evolution-tree/img/cartilaginousfish.png
    project/treant-js/examples/evolution-tree/img/chelirates.png
    project/treant-js/examples/evolution-tree/img/cnidarians.png
    project/treant-js/examples/evolution-tree/img/cvijece1.png
    project/treant-js/examples/evolution-tree/img/cvijece2.png
    project/treant-js/examples/evolution-tree/img/ferns.png
    project/treant-js/examples/evolution-tree/img/flatare.png
    project/treant-js/examples/evolution-tree/img/fungi.png
    project/treant-js/examples/evolution-tree/img/greenalgae.png
    project/treant-js/examples/evolution-tree/img/insekti.png
    project/treant-js/examples/evolution-tree/img/kornjaca.png
    project/treant-js/examples/evolution-tree/img/lophoprates.png
    project/treant-js/examples/evolution-tree/img/mosculs.png
    project/treant-js/examples/evolution-tree/img/mosses.png
    project/treant-js/examples/evolution-tree/img/ne_cvijece.png
    project/treant-js/examples/evolution-tree/img/protoctis.png
    project/treant-js/examples/evolution-tree/img/ptica.png
    project/treant-js/examples/evolution-tree/img/rak.png
    project/treant-js/examples/evolution-tree/img/rotfiers.png
    project/treant-js/examples/evolution-tree/img/roundworms.png
    project/treant-js/examples/evolution-tree/img/segmentedworms.png
    project/treant-js/examples/evolution-tree/img/slon.png
    project/treant-js/examples/evolution-tree/img/spuzva.png
    project/treant-js/examples/evolution-tree/img/truebacteria.png
    project/treant-js/examples/evolution-tree/img/zaba.png
    project/treant-js/examples/evolution-tree/img/zmijurina.png
    project/treant-js/examples/evolution-tree/img/zvezda.png
    project/treant-js/examples/evolution-tree/example6.css
    project/treant-js/examples/evolution-tree/example6.js
    project/treant-js/examples/evolution-tree/index.html
    project/treant-js/examples/headshots/1.jpg
    project/treant-js/examples/headshots/10.jpg
    project/treant-js/examples/headshots/11.jpg
    project/treant-js/examples/headshots/2.jpg
    project/treant-js/examples/headshots/4.jpg
    project/treant-js/examples/headshots/5.jpg
    project/treant-js/examples/headshots/6.jpg
    project/treant-js/examples/headshots/7.jpg
    project/treant-js/examples/headshots/8.jpg
    project/treant-js/examples/headshots/9.jpg
    project/treant-js/examples/no-parent/index.html
    project/treant-js/examples/no-parent/no-parent.css
    project/treant-js/examples/no-parent/no-parent.js
    project/treant-js/examples/simple-scrollbar/index.html
    project/treant-js/examples/simple-scrollbar/simple-scrollbar.css
    project/treant-js/examples/simple-scrollbar/simple-scrollbar.js
    project/treant-js/examples/super-simple/index.html
    project/treant-js/examples/super-simple/super-simple.css
    project/treant-js/examples/super-simple/super-simple.js
    project/treant-js/examples/tennis-draw/flags/arg.jpg
    project/treant-js/examples/tennis-draw/flags/aus.jpg
    project/treant-js/examples/tennis-draw/flags/can.jpg
    project/treant-js/examples/tennis-draw/flags/esp.jpg
    project/treant-js/examples/tennis-draw/flags/fin.jpg
    project/treant-js/examples/tennis-draw/flags/fra.jpg
    project/treant-js/examples/tennis-draw/flags/lat.jpg
    project/treant-js/examples/tennis-draw/flags/rus.jpg
    project/treant-js/examples/tennis-draw/flags/slo.jpg
    project/treant-js/examples/tennis-draw/flags/srb.jpg
    project/treant-js/examples/tennis-draw/flags/ukr.jpg
    project/treant-js/examples/tennis-draw/flags/usa.jpg
    project/treant-js/examples/tennis-draw/example7.css
    project/treant-js/examples/tennis-draw/example7.js
    project/treant-js/examples/tennis-draw/index.html
    project/treant-js/examples/tennis-draw/trophy.png
    project/treant-js/examples/test_ground/example_configs.js
    project/treant-js/examples/test_ground/image.png
    project/treant-js/examples/test_ground/index.css
    project/treant-js/examples/test_ground/index.html
    project/treant-js/examples/test_ground/slika-manja.jpg
    project/treant-js/examples/timeline/index.html
    project/treant-js/examples/timeline/timeline.css
    project/treant-js/examples/timeline/timeline.js
    project/treant-js/vendor/perfect-scrollbar/perfect-scrollbar.css
    project/treant-js/vendor/perfect-scrollbar/perfect-scrollbar.js
    project/treant-js/vendor/jquery.easing.js
    project/treant-js/vendor/jquery.min.js
    project/treant-js/vendor/jquery.mousewheel.js
    project/treant-js/vendor/raphael.js
    project/treant-js/build
    project/treant-js/LICENSE
    project/treant-js/package.json
    project/treant-js/README.md
    project/treant-js/Treant.css
    project/treant-js/Treant.js
    project/cst.cpp
    project/cst.h
    project/error.cpp
    project/error.h
    project/lexer.cpp
    project/lexer.h
    project/main.cpp
    project/makefile
    project/output.cpp
    project/output.h
    project/output.html
    project/parser.cpp
    project/parser.h
    project/README.md
    project/token.cpp
    project/token.h)

add_executable(Compiler ${SOURCE_FILES})